--- a/Landing.page.html
+++ b/Landing.page.html
@@ -146,7 +146,7 @@
             </div>
             <div class="footer-bottom text-center">
                 <div class="container">
-                    <p>&copy; 2026 LSP UPT Pelatihan Kerja Surabaya. All Rights Reserved.</p>
+                    <p>&copy; 2026 LSP UPT Pelatihan Kerja Surabaya</p>
                 </div>
             </div>
         </footer>
