Menambahkan tampilan javascript pada web

--- a/Landing.page.html
+++ b/Landing.page.html
@@ -191,7 +191,7 @@
             </div>
             <div class="berita-content">
                 <h3>SERTIFIKASI KOMPETENSI SKKNI BIDANG TEKNOLOGI INFORMASI & KOMUNIKASI DI NGANJUK, JAWA TIMUR</h3>
-                <p>LSP BLK Surabaya kembali mendapat kepercayaan dari Pusat Pengembangan Literasi [...]</p>
+                <p>LSP BLK Surabaya kembali mendapat kepercayaan dari [...]</p>
                 <a href="#" class="btn-readmore">Selengkapnya →</a>
             </div>
         </div>
@@ -200,7 +200,7 @@
             </div>
             <div class="berita-content">
                 <h3>SERTIFIKASI KOMPETENSI BIDANG ELEKTRONIKA DI SEMARANG, JAWA TENGAH</h3>
-                <p>Balai Besar Pengkajian dan Pengembangan Elektronika dan Informatika (BBPPEI) Semarang [...]</p>
+                <p>Balai Besar Pengkajian dan Pengembangan Elektronika dan Informatika Semarang [...]</p>
                 <a href="#" class="btn-readmore">Selengkapnya →</a>
             </div>
         </div>
